src/test/ui/use/use-from-trait.stderr
error[E0253]: `foo` is not directly importable
  --> $DIR/use-from-trait.rs:12:5
   |
LL | use Trait::foo;
   |     ^^^^^^^^^^ cannot be imported directly

error[E0253]: `Assoc` is not directly importable
  --> $DIR/use-from-trait.rs:14:5
   |
LL | use Trait::Assoc;
   |     ^^^^^^^^^^^^ cannot be imported directly

error[E0253]: `C` is not directly importable
  --> $DIR/use-from-trait.rs:16:5
   |
LL | use Trait::C;
   |     ^^^^^^^^ cannot be imported directly

error[E0432]: unresolved import `Foo`
  --> $DIR/use-from-trait.rs:19:5
   |
LL | use Foo::new;
   |     ^^^ Not a module `Foo`

error[E0432]: unresolved import `Foo`
  --> $DIR/use-from-trait.rs:23:5
   |
LL | use Foo::C2;
   |     ^^^ Not a module `Foo`

error: aborting due to 5 previous errors

Some errors occurred: E0253, E0432.
For more information about an error, try `rustc --explain E0253`.
